# Bruskey

./: .gitignore  CMakeLists.txt  README.md  build.sh
Components/: CMakeLists.txt
Components/Compiler/: CMakeLists.txt  lexer.l  main.cpp  parser.y
Components/IDE/: IDE.pro  application.qrc  blockly.cpp  blockly.h  highlighter.cpp  highlighter.h  index.html  main.cpp  mainwindow.cpp  mainwindow.h
Components/IDE/google-blockly/blocks/: bruskey.js
Components/IDE/google-blockly/generators/: bruskey.js
Components/IDE/google-blockly/generators/bruskey/: colour.js  logic.js
Components/Lexer/: lexer.l
Components/Parser/: parser.y
Components/SyntaxTree/: CMakeLists.txt
Components/SyntaxTree/include/: ArithmaticExpression.hpp  BuiltInExpression.hpp  BuiltInFunction.hpp  Common.hpp  ElseIfStatement.hpp  ElseStatement.hpp  Expression.hpp  ExpressionStatement.hpp  FunctionCall.hpp  Identifier.hpp  IfStatement.hpp  Integer.hpp  Node.hpp  NotEqualsExpression.hpp  ParenthesesExpression.hpp  Statement.hpp  StatementList.hpp  TranslationUnit.hpp  VariableDeclaration.hpp  WhileStatement.hpp
Components/SyntaxTree/src/: ArithmaticExpression.cpp  BuiltInFunction.cpp  Common.cpp  ElseIfStatement.cpp  ElseStatement.cpp  Expression.cpp  ExpressionStatement.cpp  FunctionCall.cpp  Identifier.cpp  IfStatement.cpp  Integer.cpp  NotEqualsExpression.cpp  ParenthesesExpression.cpp  StatementList.cpp  TranslationUnit.cpp  VariableDeclaration.cpp  WhileStatement.cpp
Components/Utils/: main.cpp
Components/build-IDE-Desktop-Debug/: IDE  Makefile  moc_blockly.cpp  moc_highlighter.cpp  moc_mainwindow.cpp  output.c  output_formatted.c  qrc_application.cpp  temp.txt  test.code  test.txt
Libs/: CMakeLists.txt
Test/: CMakeLists.txt  ExampleCode.code  test_ArithmaticExpression.cpp  test_BuiltInFunction.cpp  test_Expression.cpp  test_ExpressionStatement.cpp  test_FunctionCall.cpp  test_Identifier.cpp  test_IfStatement.cpp  test_Integer.cpp  test_NotEqualsExpression.cpp  test_ParenthesesExpression.cpp  test_TranslationUnit.cpp  test_WhileStatement.cpp
